feat: seed puzzle input command [incremental]